RESOLVED FIXED272712
Fix "Unkown" typo in ScreenCaptureKitCaptureSource.mm
https://bugs.webkit.org/show_bug.cgi?id=272712
Summary Fix "Unkown" typo in ScreenCaptureKitCaptureSource.mm
Chris Dumez
Reported 2024-04-15 16:15:41 PDT
Fix "Unkown" typo in ScreenCaptureKitCaptureSource.mm.
Attachments
Chris Dumez
Comment 1 2024-04-15 16:15:55 PDT
Chris Dumez
Comment 2 2024-04-15 16:17:11 PDT
EWS
Comment 3 2024-04-15 19:35:26 PDT
Committed 277525@main (87aaafb1c0c5): <https://commits.webkit.org/277525@main> Reviewed commits have been landed. Closing PR #27291 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.