Fix "Unkown" typo in ScreenCaptureKitCaptureSource.mm https://bugs.webkit.org/show_bug.cgi?id=272712 rdar://125260065

Reviewed by Darin Adler.

* Source/WebCore/platform/mediastream/mac/ScreenCaptureKitCaptureSource.mm:
(WebCore::ScreenCaptureKitCaptureSource::startContentStream):

Canonical link: https://commits.webkit.org/277525@main